flux/minecraft/manifests/auxilarystuff.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    istio.io/dataplane-mode: none
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: permissive-mtls
  namespace: minecraft
spec:
  mtls:
    mode: PERMISSIVE
