flux/minecraft/manifests/bedrockconnect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bedrockconnect
  name: bedrockconnect
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrockconnect
  template:
    metadata:
      labels:
        app: bedrockconnect
    spec:
      containers:
      - name: main
        image: eclipse-temurin:21-jre
        command: ["/bin/sh"]
        args:
        - -c
        - |
          curl -L -o BedrockConnect-1.0-SNAPSHOT.jar https://github.com/Pugmatt/BedrockConnect/releases/download/1.71.0/BedrockConnect-1.0-SNAPSHOT.jar
          java -Xms512M -Xmx512M -jar BedrockConnect-1.0-SNAPSHOT.jar nodb=true custom_servers=/app/custom_servers.json featured_servers=false
        imagePullPolicy: Always
        resources:
          limits:
            memory: 1Gi
        volumeMounts:
        - name: configs
          mountPath: "/app"
          readOnly: true
        ports:
        - containerPort: 19132
          protocol: UDP
          name: bedrock
      volumes:
      - name: configs
        configMap:
          name: bedrockconnect
          items:
          - key: "custom_servers.json"
            path: "custom_servers.json"
---
apiVersion: v1
kind: Service
metadata:
  name: bedrockconnect
  namespace: minecraft
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.12
spec:
  ports:
  - name: bedrock
    port: 19132
    protocol: UDP
    targetPort: 19132
  selector:
    app: bedrockconnect
  type: LoadBalancer
