flux/minecraft/manifests/minecraft2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: minecraft2
  name: minecraft2
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft2
  template:
    metadata:
      labels:
        app: minecraft2
    spec:
      containers:
      - name: main
        image: itzg/minecraft-server:stable
        securityContext:
          runAsUser: 1000
        imagePullPolicy: Always
        resources:
          limits:
            memory: 6Gi
            cpu: 2
        volumeMounts:
        - mountPath: /data
          name: data
        ports:
        - containerPort: 19132
          protocol: UDP
          name: bedrock
        - containerPort: 25565
          protocol: TCP
          name: java
        readinessProbe: &probe
          exec:
            command:
            - mc-monitor
            - status
          initialDelaySeconds: 30
          failureThreshold: 10
        livenessProbe: *probe
        tty: true
        stdin: true
      - name: backup
        image: itzg/mc-backup:stable
        securityContext:
          runAsUser: 1000
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minecraft2
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft2
  namespace: minecraft
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.15
spec:
  selector:
    app: minecraft2
  ports:
  - port: 19132
    protocol: UDP
    name: bedrock
  - port: 25565
    protocol: TCP
    name: java
  type: LoadBalancer
