flux/minecraft/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: minecraft
spec:
  egress:
  - ports:
    - port: 15008
      protocol: TCP
  - ports:
    - port: 443
      protocol: TCP
  - ports:
    - port: 80
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
  ingress:
  - ports:
    - port: 15008
      protocol: TCP
  - ports:
    - port: 19132
      protocol: UDP
  - ports:
    - port: 25565
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
